# banjo-lang

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  getbanjo.py
src/banjo/: CMakeLists.txt
src/banjo-hot-reloader/: CMakeLists.txt  diagnostics.cpp  diagnostics.hpp  file_reader.hpp  file_watcher.cpp  file_watcher.hpp  file_watcher_linux.cpp  file_watcher_windows.cpp  hot_reloader.cpp  hot_reloader.hpp  jit_compiler.cpp  jit_compiler.hpp  main.cpp  platform_utils_linux.cpp  platform_utils_linux.hpp  target_process.cpp  target_process.hpp  target_process_linux.cpp  target_process_windows.cpp
src/banjo-lsp/: CMakeLists.txt  ast_navigation.cpp  ast_navigation.hpp  base_message_stream.cpp  base_message_stream.hpp  completion_engine.cpp  completion_engine.hpp  connection.cpp  connection.hpp  diagnostics.cpp  diagnostics.hpp  index.hpp  json.cpp  json.hpp  json_parser.cpp  json_parser.hpp  json_serializer.cpp  json_serializer.hpp  main.cpp  memory_module_loader.cpp  memory_module_loader.hpp  message.hpp  protocol_structs.cpp  protocol_structs.hpp  server.cpp  server.hpp  source_manager.cpp  source_manager.hpp  symbol_ref_info.cpp  symbol_ref_info.hpp  uri.cpp  uri.hpp  workspace.cpp  workspace.hpp
src/banjo-lsp/handlers/: completion_handler.cpp  completion_handler.hpp  completion_item_resolve_handler.cpp  completion_item_resolve_handler.hpp  definition_handler.cpp  definition_handler.hpp  formatting_handler.cpp  formatting_handler.hpp  initialize_handler.cpp  initialize_handler.hpp  references_handler.cpp  references_handler.hpp  rename_handler.cpp  rename_handler.hpp  semantic_tokens_handler.cpp  semantic_tokens_handler.hpp  shutdown_handler.cpp  shutdown_handler.hpp
src/banjo-test-util/: CMakeLists.txt  assembly_util.cpp  assembly_util.hpp  formatter_util.cpp  formatter_util.hpp  line_based_reader.cpp  line_based_reader.hpp  main.cpp  ssa_parser.cpp  ssa_parser.hpp  ssa_util.cpp  ssa_util.hpp
src/banjo/ast/: ast_block.cpp  ast_block.hpp  ast_child_indices.hpp  ast_module.hpp  ast_node.cpp  ast_node.hpp  ast_utils.cpp  ast_utils.hpp  ast_writer.cpp  ast_writer.hpp  attribute.hpp  attribute_list.hpp  decl.hpp  expr.hpp  module_list.hpp  std_config_module.cpp  std_config_module.hpp  test_module.cpp  test_module.hpp
src/banjo/codegen/: ir_lowerer.cpp  ir_lowerer.hpp  late_reg_alloc.cpp  late_reg_alloc.hpp  liveness.cpp  liveness.hpp  machine_pass.hpp  machine_pass_runner.cpp  machine_pass_runner.hpp  machine_pass_utils.cpp  machine_pass_utils.hpp  prolog_epilog_pass.cpp  prolog_epilog_pass.hpp  reg_alloc_func.hpp  reg_alloc_pass.cpp  reg_alloc_pass.hpp  ssa_lowerer.cpp  ssa_lowerer.hpp  stack_frame_pass.cpp  stack_frame_pass.hpp
src/banjo/config/: argument_parser.cpp  argument_parser.hpp  config.cpp  config.hpp  config_parser.cpp  config_parser.hpp  standard_lib.cpp  standard_lib.hpp
src/banjo/emit/: aarch64_asm_emitter.cpp  aarch64_asm_emitter.hpp  binary_builder.cpp  binary_builder.hpp  binary_builder_symbol.hpp  binary_emitter.hpp  binary_module.hpp  clang_asm_emitter.cpp  clang_asm_emitter.hpp  debug_emitter.cpp  debug_emitter.hpp  emitter.hpp  nasm_emitter.cpp  nasm_emitter.hpp  section_builder.cpp  section_builder.hpp  x86_64_encoder.cpp  x86_64_encoder.hpp
src/banjo/format/: formatter.cpp  formatter.hpp
src/banjo/ir/: addr_table.cpp  addr_table.hpp  basic_block.cpp  basic_block.hpp  call_graph.cpp  call_graph.hpp  calling_conv.hpp  comparison.cpp  comparison.hpp  control_flow_graph.cpp  control_flow_graph.hpp  dead_code_elimination.cpp  dead_code_elimination.hpp  function.cpp  function.hpp  function_decl.hpp  global.hpp  global_decl.hpp  instruction.hpp  label.hpp  module.cpp  module.hpp  opcode.hpp  operand.cpp  operand.hpp  primitive.hpp  structure.cpp  structure.hpp  type.cpp  type.hpp  validator.cpp  validator.hpp  virtual_register.hpp  writer.cpp  writer.hpp
src/banjo/ir_builder/: assign_ir_builder.cpp  assign_ir_builder.hpp  block_ir_builder.cpp  block_ir_builder.hpp  bool_expr_ir_builder.cpp  bool_expr_ir_builder.hpp  closure_ir_builder.cpp  closure_ir_builder.hpp  compound_assign_ir_builder.cpp  compound_assign_ir_builder.hpp  conversion.cpp  conversion.hpp  deinit_ir_builder.cpp  deinit_ir_builder.hpp  expr_ir_builder.cpp  expr_ir_builder.hpp  for_ir_builder.cpp  for_ir_builder.hpp  func_call_ir_builder.cpp  func_call_ir_builder.hpp  func_def_ir_builder.cpp  func_def_ir_builder.hpp  if_chain_ir_builder.cpp  if_chain_ir_builder.hpp  ir_builder.cpp  ir_builder.hpp  ir_builder_context.cpp  ir_builder_context.hpp  ir_builder_utils.cpp  ir_builder_utils.hpp  location_ir_builder.cpp  location_ir_builder.hpp  name_mangling.cpp  name_mangling.hpp  return_ir_builder.cpp  return_ir_builder.hpp  root_ir_builder.cpp  root_ir_builder.hpp  runtime_ir.cpp  runtime_ir.hpp  (+14 more)
src/banjo/lexer/: buffered_reader.cpp  buffered_reader.hpp  lexer.cpp  lexer.hpp  source_reader.cpp  source_reader.hpp  token.hpp  token_list.cpp  token_list.hpp
src/banjo/mcode/: address.hpp  basic_block.cpp  basic_block.hpp  calling_convention.hpp  function.cpp  function.hpp  global.hpp  indirect_address.hpp  instruction.hpp  module.cpp  module.hpp  operand.hpp  parameter.hpp  register.hpp  stack_address.hpp  stack_frame.cpp  stack_frame.hpp  stack_regions.hpp  stack_slot.hpp  symbol.hpp
src/banjo/parser/: decl_parser.cpp  decl_parser.hpp  expr_parser.cpp  expr_parser.hpp  node_builder.hpp  parser.cpp  parser.hpp  stmt_parser.cpp  stmt_parser.hpp  token_stream.cpp  token_stream.hpp
src/banjo/passes/: addr_table_pass.cpp  addr_table_pass.hpp  branch_elimination.cpp  branch_elimination.hpp  canonicalization_pass.cpp  canonicalization_pass.hpp  control_flow_opt_pass.cpp  control_flow_opt_pass.hpp  cse_pass.cpp  cse_pass.hpp  dead_code_elimination_pass.cpp  dead_code_elimination_pass.hpp  inlining_pass.cpp  (+30 more)
src/cli/: CMakeLists.txt  argument_parser.cpp  argument_parser.hpp  cli.cpp  cli.hpp  common.cpp  common.hpp  main.cpp  main2.cpp  manifest.hpp  paths.cpp  paths.hpp  process.hpp  process_unix.cpp  process_windows.cpp  target.cpp  target.hpp  toolchains.cpp  toolchains.hpp
(+1120 files in other folders)
