add_library(banjo STATIC
    ast/ast_node.cpp
    ast/ast_writer.cpp
    ast/std_config_module.cpp
    codegen/ir_lowerer.cpp
    codegen/late_reg_alloc.cpp
    codegen/liveness.cpp
    codegen/machine_pass_runner.cpp
    codegen/machine_pass_utils.cpp
    codegen/prolog_epilog_pass.cpp
    codegen/reg_alloc_pass.cpp
    codegen/stack_frame_pass.cpp
    config/argument_parser.cpp
    config/config_parser.cpp
    config/config.cpp
    emit/binary_builder.cpp
    emit/clang_asm_emitter.cpp
    emit/debug_emitter.cpp
    emit/nasm_emitter.cpp
    emit/pe/pe_builder.cpp
    emit/pe/pe_emitter.cpp
    emit/pe/pe_format.cpp
    emit/elf/elf_builder.cpp
    emit/elf/elf_emitter.cpp
    emit/elf/elf_format.cpp
    ir/addr_table.cpp
    ir/basic_block.cpp
    ir/comparison.cpp
    ir/control_flow_graph.cpp
    ir/call_graph.cpp
    ir/dead_code_elimination.cpp
    ir/function.cpp
    ir/module.cpp
    ir/operand.cpp
    ir/structure.cpp
    ir/validator.cpp
    ir/type.cpp
    ir/writer.cpp
    lexer/buffered_reader.cpp
    lexer/lexer.cpp
    mcode/basic_block.cpp
    mcode/function.cpp
    mcode/module.cpp
    mcode/stack_frame.cpp
    parser/decl_parser.cpp
    parser/expr_parser.cpp
    parser/parser.cpp
    parser/stmt_parser.cpp
    parser/token_stream.cpp
    passes/addr_table_pass.cpp
    passes/branch_elimination.cpp
    passes/control_flow_opt_pass.cpp
    passes/cse_pass.cpp
    passes/dead_func_elimination_pass.cpp
    passes/heap_to_stack_pass.cpp
    passes/inlining_pass.cpp
    passes/licm_pass.cpp
    passes/loop_analysis.cpp
    passes/loop_inversion_pass.cpp
    passes/pass_runner.cpp
    passes/pass_utils.cpp
    passes/peephole_optimizer.cpp
    passes/precomputing.cpp
    passes/sroa_pass.cpp
    passes/stack_slot_merge_pass.cpp
    passes/stack_to_reg_pass.cpp
    reports/report_manager.cpp
    reports/report_printer.cpp    
    reports/report_texts.cpp
    reports/report.cpp
    sema2/const_evaluator.cpp
    sema2/decl_body_analyzer.cpp
    sema2/decl_interface_analyzer.cpp
    sema2/decl_visitor.cpp
    sema2/expr_analyzer.cpp
    sema2/expr_finalizer.cpp
    sema2/generic_arg_inference.cpp
    sema2/generics_specializer.cpp
    sema2/meta_expansion.cpp
    sema2/meta_expr_evaluator.cpp
    sema2/report_generator.cpp
    sema2/resource_analyzer.cpp
    sema2/semantic_analyzer.cpp
    sema2/stmt_analyzer.cpp
    sema2/symbol_collector.cpp
    sema2/type_alias_resolver.cpp
    sema2/use_resolver.cpp
    sir/magic_methods.cpp
    sir/sir_cloner.cpp
    sir/sir_create.cpp
    sir/sir_generator.cpp
    sir/sir_printer.cpp
    sir/sir.cpp
    sir/test_driver_generator.cpp
    source/file_module_loader.cpp
    source/module_discovery.cpp
    source/module_manager.cpp
    source/module_path.cpp
    source/text_range.cpp
    ssa_gen/block_ssa_generator.cpp
    ssa_gen/expr_ssa_generator.cpp
    ssa_gen/global_ssa_generator.cpp
    ssa_gen/name_mangling.cpp
    ssa_gen/ssa_generator_context.cpp
    ssa_gen/ssa_generator_utils.cpp
    ssa_gen/ssa_generator.cpp
    ssa_gen/stored_value.cpp
    ssa_gen/type_ssa_generator.cpp
    target/standard_data_layout.cpp
    target/target_data_layout.cpp
    target/target_description.cpp
    target/target.cpp
    target/aarch64/aapcs_calling_conv.cpp
    target/aarch64/aarch64_encoding_info.cpp
    target/aarch64/aarch64_immediate.cpp
    target/aarch64/aarch64_instr_merge_pass.cpp
    target/aarch64/aarch64_ir_lowerer.cpp
    target/aarch64/aarch64_reg_analyzer.cpp
    target/aarch64/aarch64_target.cpp
    target/x86_64/ms_abi_calling_conv.cpp
    target/x86_64/sys_v_calling_conv.cpp
    target/x86_64/x86_64_addr_lowering.cpp
    target/x86_64/x86_64_const_lowering.cpp
    target/x86_64/x86_64_encoder.cpp
    target/x86_64/x86_64_ir_lowerer.cpp
    target/x86_64/x86_64_peephole_opt_pass.cpp
    target/x86_64/x86_64_reg_analyzer.cpp
    target/x86_64/x86_64_target.cpp
    utils/bit_operations.cpp
    utils/json_parser.cpp
    utils/json_serializer.cpp
    utils/json.cpp
    utils/large_int.cpp
    utils/paths.cpp
    utils/timing.cpp
    utils/utf8_encoding.cpp
    utils/utils.cpp
    utils/write_buffer.cpp
)

target_include_directories(banjo PUBLIC "${BANJO_SOURCE_DIR}")
