add_library(banjo STATIC
    "ast/ast_module.hpp"
    "ast/ast_node.cpp"
    "ast/ast_node.hpp"
    "ast/ast_writer.cpp"
    "ast/ast_writer.hpp"
    "ast/module_list.hpp"
    "ast/std_config_module.cpp"
    "ast/std_config_module.hpp"
    "codegen/late_reg_alloc.cpp"
    "codegen/late_reg_alloc.hpp"
    "codegen/liveness.cpp"
    "codegen/liveness.hpp"
    "codegen/machine_pass.hpp"
    "codegen/machine_pass_runner.cpp"
    "codegen/machine_pass_runner.hpp"
    "codegen/machine_pass_utils.cpp"
    "codegen/machine_pass_utils.hpp"
    "codegen/prolog_epilog_pass.cpp"
    "codegen/prolog_epilog_pass.hpp"
    "codegen/reg_alloc_func.hpp"
    "codegen/reg_alloc_pass.cpp"
    "codegen/reg_alloc_pass.hpp"
    "codegen/ssa_lowerer.cpp"
    "codegen/ssa_lowerer.hpp"
    "codegen/stack_frame_pass.cpp"
    "codegen/stack_frame_pass.hpp"
    "config/argument_parser.cpp"
    "config/argument_parser.hpp"
    "config/config.cpp"
    "config/config.hpp"
    "config/config_parser.cpp"
    "config/config_parser.hpp"
    "emit/aarch64_asm_emitter.cpp"
    "emit/aarch64_asm_emitter.hpp"
    "emit/binary_builder.cpp"
    "emit/binary_builder.hpp"
    "emit/binary_builder_symbol.hpp"
    "emit/binary_emitter.hpp"
    "emit/binary_module.hpp"
    "emit/debug_emitter.cpp"
    "emit/debug_emitter.hpp"
    "emit/emitter.hpp"
    "emit/nasm_emitter.cpp"
    "emit/nasm_emitter.hpp"
    "emit/section_builder.cpp"
    "emit/section_builder.hpp"
    "emit/elf/elf_builder.cpp"
    "emit/elf/elf_builder.hpp"
    "emit/elf/elf_emitter.cpp"
    "emit/elf/elf_emitter.hpp"
    "emit/elf/elf_format.hpp"
    "emit/macho/macho_builder.cpp"
    "emit/macho/macho_builder.hpp"
    "emit/macho/macho_emitter.cpp"
    "emit/macho/macho_emitter.hpp"
    "emit/macho/macho_format.hpp"
    "emit/pe/pe_builder.cpp"
    "emit/pe/pe_builder.hpp"
    "emit/pe/pe_emitter.cpp"
    "emit/pe/pe_emitter.hpp"
    "emit/pe/pe_format.cpp"
    "emit/pe/pe_format.hpp"
    "emit/wasm/wasm_builder.cpp"
    "emit/wasm/wasm_builder.hpp"
    "emit/wasm/wasm_emitter.cpp"
    "emit/wasm/wasm_emitter.hpp"
    "emit/wasm/wasm_format.hpp"
    "format/formatter.cpp"
    "format/formatter.hpp"
    "lexer/lexer.cpp"
    "lexer/lexer.hpp"
    "lexer/source_reader.hpp"
    "lexer/token.hpp"
    "mcode/basic_block.cpp"
    "mcode/basic_block.hpp"
    "mcode/calling_convention.hpp"
    "mcode/function.cpp"
    "mcode/function.hpp"
    "mcode/global.hpp"
    "mcode/indirect_address.hpp"
    "mcode/instruction.hpp"
    "mcode/module.cpp"
    "mcode/module.hpp"
    "mcode/operand.hpp"
    "mcode/register.hpp"
    "mcode/stack_frame.cpp"
    "mcode/stack_frame.hpp"
    "mcode/stack_regions.hpp"
    "mcode/stack_slot.hpp"
    "mcode/symbol.hpp"
    "parser/decl_parser.cpp"
    "parser/decl_parser.hpp"
    "parser/expr_parser.cpp"
    "parser/expr_parser.hpp"
    "parser/node_builder.hpp"
    "parser/parser.cpp"
    "parser/parser.hpp"
    "parser/stmt_parser.cpp"
    "parser/stmt_parser.hpp"
    "parser/token_stream.cpp"
    "parser/token_stream.hpp"
    "passes/addr_table_pass.cpp"
    "passes/addr_table_pass.hpp"
    "passes/branch_elimination.cpp"
    "passes/branch_elimination.hpp"
    "passes/canonicalization_pass.cpp"
    "passes/canonicalization_pass.hpp"
    "passes/control_flow_opt_pass.cpp"
    "passes/control_flow_opt_pass.hpp"
    "passes/cse_pass.cpp"
    "passes/cse_pass.hpp"
    "passes/dead_func_elimination_pass.cpp"
    "passes/dead_func_elimination_pass.hpp"
    "passes/heap_to_stack_pass.cpp"
    "passes/heap_to_stack_pass.hpp"
    "passes/inlining_pass.cpp"
    "passes/inlining_pass.hpp"
    "passes/licm_pass.cpp"
    "passes/licm_pass.hpp"
    "passes/loop_analysis.cpp"
    "passes/loop_analysis.hpp"
    "passes/loop_inversion_pass.cpp"
    "passes/loop_inversion_pass.hpp"
    "passes/pass.hpp"
    "passes/pass_runner.cpp"
    "passes/pass_runner.hpp"
    "passes/pass_utils.cpp"
    "passes/pass_utils.hpp"
    "passes/peephole_optimizer.cpp"
    "passes/peephole_optimizer.hpp"
    "passes/precomputing.cpp"
    "passes/precomputing.hpp"
    "passes/sroa_pass.cpp"
    "passes/sroa_pass.hpp"
    "passes/stack_slot_merge_pass.cpp"
    "passes/stack_slot_merge_pass.hpp"
    "passes/stack_to_reg_pass.cpp"
    "passes/stack_to_reg_pass.hpp"
    "reports/report.cpp"
    "reports/report.hpp"
    "reports/report_manager.cpp"
    "reports/report_manager.hpp"
    "reports/report_printer.cpp"
    "reports/report_printer.hpp"
    "reports/report_texts.cpp"
    "reports/report_texts.hpp"
    "sema/completion_context.hpp"
    "sema/const_evaluator.cpp"
    "sema/const_evaluator.hpp"
    "sema/decl_body_analyzer.cpp"
    "sema/decl_body_analyzer.hpp"
    "sema/decl_interface_analyzer.cpp"
    "sema/decl_interface_analyzer.hpp"
    "sema/decl_visitor.cpp"
    "sema/decl_visitor.hpp"
    "sema/expr_analyzer.cpp"
    "sema/expr_analyzer.hpp"
    "sema/expr_finalizer.cpp"
    "sema/expr_finalizer.hpp"
    "sema/expr_property_analyzer.cpp"
    "sema/expr_property_analyzer.hpp"
    "sema/extra_analysis.hpp"
    "sema/generics_specializer.cpp"
    "sema/generics_specializer.hpp"
    "sema/generic_arg_inference.cpp"
    "sema/generic_arg_inference.hpp"
    "sema/meta_expansion.cpp"
    "sema/meta_expansion.hpp"
    "sema/meta_expr_evaluator.cpp"
    "sema/meta_expr_evaluator.hpp"
    "sema/overload_resolver.cpp"
    "sema/overload_resolver.hpp"
    "sema/pointer_escape_checker.cpp"
    "sema/pointer_escape_checker.hpp"
    "sema/report_generator.cpp"
    "sema/report_generator.hpp"
    "sema/resource_analyzer.cpp"
    "sema/resource_analyzer.hpp"
    "sema/return_checker.cpp"
    "sema/return_checker.hpp"
    "sema/semantic_analyzer.cpp"
    "sema/semantic_analyzer.hpp"
    "sema/stmt_analyzer.cpp"
    "sema/stmt_analyzer.hpp"
    "sema/symbol_collector.cpp"
    "sema/symbol_collector.hpp"
    "sema/symbol_context.cpp"
    "sema/symbol_context.hpp"
    "sema/type_alias_resolver.cpp"
    "sema/type_alias_resolver.hpp"
    "sema/use_resolver.cpp"
    "sema/use_resolver.hpp"
    "sir/magic_methods.cpp"
    "sir/magic_methods.hpp"
    "sir/sir.cpp"
    "sir/sir.hpp"
    "sir/sir_cloner.cpp"
    "sir/sir_cloner.hpp"
    "sir/sir_create.cpp"
    "sir/sir_create.hpp"
    "sir/sir_generator.cpp"
    "sir/sir_generator.hpp"
    "sir/sir_printer.cpp"
    "sir/sir_printer.hpp"
    "sir/sir_visitor.hpp"
    "sir/test_driver_generator.cpp"
    "sir/test_driver_generator.hpp"
    "source/module_discovery.cpp"
    "source/module_discovery.hpp"
    "source/module_manager.cpp"
    "source/module_manager.hpp"
    "source/module_path.cpp"
    "source/module_path.hpp"
    "source/source_file.cpp"
    "source/source_file.hpp"
    "source/text_range.cpp"
    "source/text_range.hpp"
    "ssa/addr_table.cpp"
    "ssa/addr_table.hpp"
    "ssa/basic_block.cpp"
    "ssa/basic_block.hpp"
    "ssa/call_graph.cpp"
    "ssa/call_graph.hpp"
    "ssa/comparison.cpp"
    "ssa/comparison.hpp"
    "ssa/control_flow_graph.cpp"
    "ssa/control_flow_graph.hpp"
    "ssa/dead_code_elimination.cpp"
    "ssa/dead_code_elimination.hpp"
    "ssa/function.cpp"
    "ssa/function.hpp"
    "ssa/function_type.hpp"
    "ssa/global.hpp"
    "ssa/instruction.cpp"
    "ssa/instruction.hpp"
    "ssa/module.cpp"
    "ssa/module.hpp"
    "ssa/opcode.hpp"
    "ssa/operand.cpp"
    "ssa/operand.hpp"
    "ssa/primitive.hpp"
    "ssa/structure.hpp"
    "ssa/type.cpp"
    "ssa/type.hpp"
    "ssa/utils.cpp"
    "ssa/utils.hpp"
    "ssa/validator.cpp"
    "ssa/validator.hpp"
    "ssa/virtual_register.hpp"
    "ssa/writer.cpp"
    "ssa/writer.hpp"
    "ssa_gen/block_ssa_generator.cpp"
    "ssa_gen/block_ssa_generator.hpp"
    "ssa_gen/expr_ssa_generator.cpp"
    "ssa_gen/expr_ssa_generator.hpp"
    "ssa_gen/global_ssa_generator.cpp"
    "ssa_gen/global_ssa_generator.hpp"
    "ssa_gen/name_mangling.cpp"
    "ssa_gen/name_mangling.hpp"
    "ssa_gen/ssa_generator.cpp"
    "ssa_gen/ssa_generator.hpp"
    "ssa_gen/ssa_generator_context.cpp"
    "ssa_gen/ssa_generator_context.hpp"
    "ssa_gen/storage_hints.hpp"
    "ssa_gen/stored_value.cpp"
    "ssa_gen/stored_value.hpp"
    "ssa_gen/type_ssa_generator.cpp"
    "ssa_gen/type_ssa_generator.hpp"
    "target/standard_data_layout.cpp"
    "target/standard_data_layout.hpp"
    "target/target.cpp"
    "target/target.hpp"
    "target/target_data_layout.cpp"
    "target/target_data_layout.hpp"
    "target/target_description.cpp"
    "target/target_description.hpp"
    "target/target_reg_analyzer.hpp"
    "target/aarch64/aapcs_calling_conv.cpp"
    "target/aarch64/aapcs_calling_conv.hpp"
    "target/aarch64/aarch64_address.hpp"
    "target/aarch64/aarch64_condition.hpp"
    "target/aarch64/aarch64_encoder.cpp"
    "target/aarch64/aarch64_encoder.hpp"
    "target/aarch64/aarch64_encoding_info.cpp"
    "target/aarch64/aarch64_encoding_info.hpp"
    "target/aarch64/aarch64_immediate.cpp"
    "target/aarch64/aarch64_immediate.hpp"
    "target/aarch64/aarch64_instr_merge_pass.cpp"
    "target/aarch64/aarch64_instr_merge_pass.hpp"
    "target/aarch64/aarch64_opcode.hpp"
    "target/aarch64/aarch64_register.hpp"
    "target/aarch64/aarch64_reg_analyzer.cpp"
    "target/aarch64/aarch64_reg_analyzer.hpp"
    "target/aarch64/aarch64_ssa_lowerer.cpp"
    "target/aarch64/aarch64_ssa_lowerer.hpp"
    "target/aarch64/aarch64_stack_offset_fixup_pass.cpp"
    "target/aarch64/aarch64_stack_offset_fixup_pass.hpp"
    "target/aarch64/aarch64_target.cpp"
    "target/aarch64/aarch64_target.hpp"
    "target/wasm/wasm_calling_conv.cpp"
    "target/wasm/wasm_calling_conv.hpp"
    "target/wasm/wasm_mcode.hpp"
    "target/wasm/wasm_opcode.cpp"
    "target/wasm/wasm_opcode.hpp"
    "target/wasm/wasm_ssa_lowerer.cpp"
    "target/wasm/wasm_ssa_lowerer.hpp"
    "target/wasm/wasm_target.cpp"
    "target/wasm/wasm_target.hpp"
    "target/x86_64/ms_abi_calling_conv.cpp"
    "target/x86_64/ms_abi_calling_conv.hpp"
    "target/x86_64/sys_v_calling_conv.cpp"
    "target/x86_64/sys_v_calling_conv.hpp"
    "target/x86_64/x86_64_addr_lowering.cpp"
    "target/x86_64/x86_64_addr_lowering.hpp"
    "target/x86_64/x86_64_const_lowering.cpp"
    "target/x86_64/x86_64_const_lowering.hpp"
    "target/x86_64/x86_64_encoder.cpp"
    "target/x86_64/x86_64_encoder.hpp"
    "target/x86_64/x86_64_opcode.hpp"
    "target/x86_64/x86_64_peephole_opt_pass.cpp"
    "target/x86_64/x86_64_peephole_opt_pass.hpp"
    "target/x86_64/x86_64_register.hpp"
    "target/x86_64/x86_64_reg_analyzer.cpp"
    "target/x86_64/x86_64_reg_analyzer.hpp"
    "target/x86_64/x86_64_ssa_lowerer.cpp"
    "target/x86_64/x86_64_ssa_lowerer.hpp"
    "target/x86_64/x86_64_target.cpp"
    "target/x86_64/x86_64_target.hpp"
    "utils/arena.hpp"
    "utils/bit_operations.cpp"
    "utils/bit_operations.hpp"
    "utils/bit_set.cpp"
    "utils/bit_set.hpp"
    "utils/box.hpp"
    "utils/dynamic_pointer.hpp"
    "utils/fixed_vector.hpp"
    "utils/heap_array.hpp"
    "utils/json.cpp"
    "utils/json.hpp"
    "utils/json_parser.cpp"
    "utils/json_parser.hpp"
    "utils/json_serializer.cpp"
    "utils/json_serializer.hpp"
    "utils/large_int.cpp"
    "utils/large_int.hpp"
    "utils/linked_list.hpp"
    "utils/macros.hpp"
    "utils/parallel_runner.cpp"
    "utils/parallel_runner.hpp"
    "utils/paths.cpp"
    "utils/paths.hpp"
    "utils/platform.hpp"
    "utils/soft_int.hpp"
    "utils/static_vector.hpp"
    "utils/string_arena.hpp"
    "utils/timing.cpp"
    "utils/timing.hpp"
    "utils/typed_arena.hpp"
    "utils/utf8_encoding.cpp"
    "utils/utf8_encoding.hpp"
    "utils/utils.cpp"
    "utils/utils.hpp"
    "utils/write_buffer.cpp"
    "utils/write_buffer.hpp"
)

target_include_directories(banjo PUBLIC "${BANJO_SOURCE_DIR}")
